1998-11-27  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-geometry.c:
	Added API docs.

	* gnome-calculator.c, gnome-client.c, gnome-dateedit.c,
	gnome-entry.c, gnome-font-picker.c, gnome-font-selector.c,
	gnome-geometry.c, gnome-init.c, gnome-mdi-session.c,
	gnome-scores.c, gnome-stock.c, gtk-ted.c,
	gtkdial.c, gtkspell.c, stock_demo.c, ted_demo.c,
	winhints_demo.c:

        Replaced sprintf calls with g_snprintf.
        Updated a couple hardcoded length values to instead use sizeof().

Thu Nov 26 21:20:10 1998  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c: added inline docs

1998-11-26  James Henstridge  <james@daa.com.au>

	* gnometypes.c: added ability to register new boxed types.  This
	is encapsulated in the function gnome_type_register_boxed, which
	maybe should be moved to GTK.

	* gnome-boxed.defs: added definitions of GdkImlibImage and
	GnomeCanvasPoints, so type id's will be generated for them.

	* gnome-canvas-image.c, gnome-canvas-line.c,
	gnome-canvas-polygon.c, gnome-canvas-rect-ellipse.c,
	gnome-canvas-text.c: changed occurences of GTK_TYPE_POINTER to
	GTK_TYPE_GDK_IMLIB_IMAGE or GTK_TYPE_GNOME_CANVAS_POINTS where
	appropriate.  Also changed the type for the stipples from
	GTK_TYPE_BOXED to GTK_TYPE_GDK_WINDOW.

	* gnome-font-picker.c: changed the argument to the font_set
	signal from GTK_TYPE_POINTER to GTK_TYPE_STRING.

	* gnome-icon-list.c: changed argument to (un)select_icon signals
	from GTK_TYPE_POINTER to GTK_TYPE_GDK_EVENT.

1998-11-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtk-ted.c (gtk_ted_init): Buglette fix.

Thu Nov 26 19:09:46 1998  George Lebl  <jirka@5z.com>

	* gnome-file-entry.c: add inline documentation

1998-11-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-entry.c (show_icon_selection): Fixed spacing.

	* gnome-file-entry.c (gnome_file_entry_get_full_path): Fixed spacing.

1998-11-26  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-dialog-util.[ch]: new, more generic function
	  gnome_request_dialog().